# PolynomParser

./: CMakeLists.txt  README.md
src/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PolynomProcessor.h  PolynomProcessor.hpp  Token.hpp  generator.cpp  main.cpp  polynoms.txt
